log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment-1-1
  namespace: exercises
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      volumes:
        - name: shared-log-volume
          persistentVolumeClaim:
            claimName: log-output-pvc
      containers:
        - name: app-reader
          image: reader:1.2
          imagePullPolicy: Never
          volumeMounts: # Mount volume
          - name: shared-log-volume
            mountPath:  /usr/src/app/files
        - name: app-writer
          image: writer:1.1
          imagePullPolicy: Never
          volumeMounts: # Mount volume
          - name: shared-log-volume
            mountPath:  /usr/src/app/files
