log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
  labels:
    app: my-app
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
