log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  namespace: exercises
  labels:
    app: my-app
spec:
  rules:
    - host: log-output.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 3000
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 3000
